overflows with buttons and body fixed

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,26 +5,23 @@ body {
 	margin: 0;
 	box-sizing: border-box;
 	font-family: "Work Sans", sans-serif;
+	max-width: 100%;
+	overflow-x: hidden;
 }
 
 .bg-cards {
 	display: block;
 	height: 100vh;
 	position: relative;
-	overflow: hidden;
 }
 
 .card1 {
-	top: 0;
-	left: 0;
 	width: 100vw;
-	margin: 0;
 	background-color: #fcd116;
 }
 
 .card2 {
-	width: 100%;
-	margin: 0;
+	width: 100vw;
 	background-color: rgba($color: #000000, $alpha: 0);
 }
 header {
@@ -32,7 +29,6 @@ header {
 	position: fixed;
 	z-index: 1;
 	top: 0;
-	left: 0;
 	right: 0;
 	// Use if header is position != fixed
 	// &::after {
@@ -43,7 +39,6 @@ header {
 
 	.container {
 		position: relative;
-		width: 100%;
 		// margin: 0 2em;
 		overflow: hidden;
 
@@ -118,7 +113,7 @@ header {
 #fallingLetters {
 	margin-top: 10vh;
 	height: 50vh;
-	width: 100vw;
+	width: 100%;
 	background: rgba(0, 0, 0, 0);
 	overflow: hidden;
 	display: flex;
@@ -126,7 +121,6 @@ header {
 	flex-direction: column;
 	font-family: Mina, Roboto, "Helvetica Neue", sans-serif;
 	position: absolute;
-	top: 0;
 	left: 0;
 
 	main {
@@ -224,7 +218,6 @@ header {
 	position: absolute;
 	left: 15em;
 	bottom: 10em;
-	width: 100%;
 	display: flex;
 	// place-content: center;
 
